refactor: one policy per app

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,13 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Prose from "../components/Prose.astro";
-import { Content } from "../content/privacy.md";
 ---
 
-<Layout title="Privacy Policy">
-  <main class="mx-16 my-64 md:max-w-xl">
-    <Prose>
-      <Content />
-    </Prose>
+<Layout title="Mobile Apps">
+  <main class="mx-16 my-64 md:max-w-xl text-white">
+    <h2 class="mb-4 text-2xl font-bold">Mobile Apps</h2>
+    <ul>
+      <li><a href="/vmk" class="text-blue-500">Nsu na Okumikomi</a></li>
+      <li><a href="/ccw" class="text-blue-500">Christ Church Waterkloof</a></li>
+    </ul>
   </main>
 </Layout>
